2A/05_Projet_GL/src/test/deca/context/invalid/complet/10_duplication_field_methode.deca
// Description :
//     duplication du champ en methode 
// Resultats :
//    ligne 12 : x est deja déclarée
// Historique :
//  cree le 16/01/2024

class A {

    int x ; 

    int x() {
        
    }
}